--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="description" content="Demoflu Demo">
 
   <!-- iOS meta tags & icons -->
