--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="/demoflu_demo/">
-  <!--base href="/demoflu_demo/"-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <meta name="description" content="Demoflu Demo">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -31,12 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Demoflu Demo</title>
+  <title>demoflu_demo</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3160054620';
+    var serviceWorkerVersion = '1966793989';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
